// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error states should apply correct classes to multiple types of field 1`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                        <input>
                                    </form>"
`;

exports[`error states should apply error after success state to field 1`] = `
"<form novalidate=\\"\\" class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should apply error after success state to field 2`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                    </form>"
`;

exports[`error states should apply error class to invalid field 1`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                    </form>"
`;

exports[`error states should apply success after error state to field 1`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                    </form>"
`;

exports[`error states should apply success after error state to field 2`] = `
"<form novalidate=\\"\\" class=\\"has-success\\">
                                        <input required=\\"\\" class=\\"has-success\\"><p class=\\"form-error is-hidden\\"></p>
                                    </form>"
`;

exports[`error states should apply success class to valid field 1`] = `
"<form novalidate=\\"\\" class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should not apply any class to field with no validation rule 1`] = `
"<form novalidate=\\"\\" class=\\"has-success\\">
                                        <input>
                                    </form>"
`;

exports[`error states should not apply multiple error classes to invalid field 1`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                    </form>"
`;

exports[`on keydown should not validate form on 'tab' 1`] = `
"<form novalidate=\\"\\">
                                    <input required=\\"\\" value=\\"test\\">
                                    <button type=\\"submit\\">submit</button>
                                </form>"
`;

exports[`on keydown should validate entire form on 'enter' 1`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                            <input required=\\"\\" value=\\"test\\" class=\\"has-success\\">
                                            <input required=\\"\\" value=\\"\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                            <button type=\\"submit\\">submit</button>
                                        </form>"
`;

exports[`on submit should validate invalid form on submit 1`] = `
"<form novalidate=\\"\\" class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\"><p class=\\"form-error\\">This field is required.</p>
                                        <button type=\\"submit\\">submit</button>
                                    </form>"
`;

exports[`on submit should validate valid form on submit 1`] = `
"<form novalidate=\\"\\" class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"test\\" class=\\"has-success\\">
                                        <button type=\\"submit\\">submit</button>
                                    </form>"
`;
